# picard-rs

./: Cargo.toml
picard/: Cargo.toml
picard-core/: Cargo.toml
picard-core/src/: alloc.rs  buffer.rs  dvle.rs  lib.rs  maestro.rs  stuff.rs  utils.rs
picard/examples/: shader.pica  shader.rs
picard/src/: lib.rs
