[package]
name = "picard"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
picard-core = { version = "0.1.0", path = "../picard-core" }
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"
